# keymap-generator

./: Cargo.toml  typing-time.html
misc/cdk/: package.json  pnpm-lock.yaml
misc/cdk/learning/: cdk.json  package.json  pnpm-lock.yaml
misc/cdk/learning/lib/: learning-stack.ts
misc/cdk/learning/test/: learning.test.ts
src/: char_def.rs  combination_frequency.rs  connection_score.rs  frequency_layer.rs  frequency_table.rs  key.rs  key_def.rs  key_seq.rs  keymap.rs  layout.rs  main.rs  new_keymap.rs  playground.rs  score.rs
