[package]
name = "keymap-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
ctrlc = "3.4.4"
env_logger = "0.11.3"
log = "0.4.21"
postcard = { version = "1.0.8", features = ["alloc"] }
primes = "0.3.0"
rand = "0.8.5"
scraper = "0.19.0"
serde = "1.0.198"
threadpool = "1.8.1"

[profile.release]
debug = 1
